--- a/docker-compose.advanced.yml
+++ b/docker-compose.advanced.yml
@@ -1,4 +1,5 @@
-version: "3.4"
+version: "3.8"
+
 volumes:
   broker:
   database:
@@ -9,6 +10,7 @@ x-taiga-common: &taiga-common
     - media:/srv/taiga-back/media
     - ./docker-compose/front.json:/etc/opt/taiga-front/conf.json:ro
     - ./docker-compose/settings.py:/etc/opt/taiga-back/settings.py:ro
+
 services:
   broker:
     image: rabbitmq:3.8
@@ -17,15 +19,18 @@ services:
       RABBITMQ_NODENAME: rabbit@localhost
     volumes:
       - broker:/var/lib/rabbitmq
+  
   database:
-    image: postgres:11
+    image: postgres:13
     environment:
-      POSTGRES_DB: taiga
-      POSTGRES_PASSWORD: changeme
-      POSTGRES_USER: taiga
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PORT: ${POSTGRES_PORT}
     stop_signal: SIGINT
     volumes:
       - database:/var/lib/postgresql/data
+  
   events:
     image: taigaio/taiga-events5:latest
     deploy:
@@ -41,24 +46,27 @@ services:
         ! egrep -m 1 -q '^Unhandled rejection ' /var/log/taiga-events.log"
     volumes:
       - ./docker-compose/events.json:/etc/opt/taiga-events/config.json:ro
+  
   migrations:
     <<: *taiga-common
     command:
       - migrate
       # Make sure this command is run only during the initial setup as it will
       # overwrite existing data.
-      # - populate-db
+      - populate-db
     deploy:
       restart_policy:
         condition: on-failure
         delay: 5s
+  
   reverse-proxy:
     image: nginx:1.17
     ports:
-      - "8080:80"
+      - "${PORT:-8888}:80"
     stop_signal: SIGQUIT
     volumes:
       - ./docker-compose/default.conf:/etc/nginx/conf.d/default.conf:ro
+  
   server:
     <<: *taiga-common
     command: run-server
@@ -68,9 +76,9 @@ services:
         order: start-first
     environment:
       UWSGI_HTTP: ~
-      UWSGI_HTTP_SOCKET: :8080
+      UWSGI_HTTP_SOCKET: :${PORT:-8888}
       UWSGI_OFFLOAD_THREADS: 4
       UWSGI_UWSGI_SOCKET: :3031
     healthcheck:
-      test: wget -q -t 1 --spider http://localhost:8080/api/v1/
+      test: wget -q -t 1 --spider http://localhost:${PORT:-8888}/api/v1/
     stop_signal: SIGHUP
