--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,16 @@
-version: "3.2"
+version: "3.8"
+
 volumes:
   database:
   media:
+
 services:
   database:
-    image: postgres:11
+    image: postgres:13
     environment:
-      POSTGRES_DB: taiga
-      POSTGRES_PASSWORD: changeme
-      POSTGRES_USER: taiga
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
     stop_signal: SIGINT
     volumes:
       - database:/var/lib/postgresql/data
@@ -18,12 +20,13 @@ services:
       - migrate
       # Make sure this command is run only during the initial setup as it will
       # overwrite existing data.
-      # - populate-db
+      - populate-db
       - run-server
     healthcheck:
-      test: wget -q -t 1 --spider http://localhost:8080/api/v1/
+      test: wget -q -t 1 --spider http://localhost:${PORT:-8888}/api/v1/
     ports:
-      - 8080:8080
+      - ${PORT:-8888}:8080
     stop_signal: SIGHUP
     volumes:
+      - ./docker-compose/settings.py:/etc/opt/taiga-back/settings.py:ro
       - media:/srv/taiga-back/media
